# RrFramework

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  nvim  vk.txt
.cache/: neovim-tasks.json
.cache/clangd/index/: app.c.0A3F5F3D6A647611.idx  app.h.119AD20291485C6F.idx  core.h.D5271267036B698C.idx  deps.cpp.6BE3B7A3A7AFC1C4.idx  deps.cpp.F46D6004E206B0EB.idx  deps.cxx.BDF8B32DB98A0F51.idx  main.c.8D7E20874B3326D4.idx  main.c.FF71C262AE4E8958.idx  renderer.c.69C2CDE97F40D732.idx  renderer.h.B3397A89FC8C6A8E.idx
Asset/: Iosevka.json  MartianMono.json  Present.frag.glsl  Present.vert.glsl  Shared.glsl  Text.glsl  Text.vert.glsl  poc_depth - Copy.exr  poc_depthdfg.exr  poc_depthh.exr  poc_depthxx.exr  test.comp  triangle.frag  triangle.vert
Asset/Shader/: Shared.glsl  Uber3D.frag.glsl  Uber3D.glsl  Uber3D.vert.glsl
CMake/: EmbedAssets.cmake
Demo/: CMakeLists.txt
Demo/Asset/: Arrow.glb  Cube.glb  Marble.glb  Triangle.glb  poc_combined.exr  poc_depth.exr  tower.glb
Demo/Asset/Shader/: Creep.frag.glsl  Creep.glsl  Creep.vert.glsl  ShadowPass.vert.glsl  Shared.glsl  Test.frag.glsl  Test.vert.glsl  Uber3D.frag.glsl  Uber3D.glsl  Uber3D.vert.glsl  Unlit.frag.glsl  Unlit.glsl  Unlit.vert.glsl
Demo/Source/: AssetDef.c  AssetDef.cxx  DevTools.c  DevTools.cxx  DevTools.h  DevTools.hxx  Game.c  Game.cxx  Game.hxx  Main.c  Main.cxx
Examples/01_Triangle/: 01_Triangle.c  CMakeLists.txt  Main.c  Triangle.frag.glsl  Triangle.vert.glsl
Examples/05_GLTFCube/: 05_GLTFCube.c  CMakeLists.txt  GLTFCube.frag.glsl  GLTFCube.vert.glsl  Main.c
Examples/10_BitonicSort/: BitonicSort.comp.glsl  CMakeLists.txt  Main.cxx  Validate.comp.glsl
Examples/11_PrefixSum/: CMakeLists.txt  Main.cxx  PrefixSum.comp.glsl
Examples/99_GS/: BitonicSort.comp.glsl  BitonicSorter.hxx  CMakeLists.txt  Camera.hxx  GS.cxx  GS.frag.glsl  GS.glsl  GS.vert.glsl  Input.hxx  Main.cxx  Shared.glsl  Sort.comp.glsl  SortList.comp.glsl
Include/Rr/: Rr.h  Rr_App.h  Rr_Array.h  Rr_Asset.h  Rr_BlitNode.h  Rr_Buffer.h  Rr_BuiltinNode.h  Rr_Core.h  Rr_Defines.h  Rr_Descriptor.h  Rr_Draw.h  Rr_Framework.h  Rr_GLTF.h  Rr_Graph.h  Rr_GraphicsNode.h  Rr_Image.h  Rr_Input.h  Rr_Load.h  Rr_Material.h  Rr_Math.h  Rr_Memory.h  Rr_Mesh.h  Rr_OS.h  Rr_Pipeline.h  Rr_Platform.h  Rr_PresentNode.h  Rr_Renderer.h  Rr_String.h  Rr_Text.h  Rr_TransferNode.h  Rr_UI.h  Rr_Util.h  Rr_Utility.h
Source/: App.c  App.cxx  App.h  App.hxx  AssetDef.c  CMakeLists.txt  Core.h  Core.hxx  Deps.cxx  DevTools.c  DevTools.h  Game.c  Game.h  Main.c  Render.c  Render.h  Renderer.c  Renderer.cxx  Renderer.h  Renderer.hxx  RendererHelpers.h  RendererHelpers.hxx  RendererLib.hxx  RendererTypes.h  RendererTypes.hxx  Rr.c  Rr.cxx  Rr.h  Rr.hxx  RrLib.h  RrLib.hxx  RrTypes.h  RrTypes.hxx  Rr_App.c  Rr_App.h  Rr_App_Internal.h  Rr_Array.c  Rr_Asset.c  Rr_AssetDef.c  Rr_Barrier.c  (+89 more)
Source/Graph/: Rr_BuiltinNode.c  Rr_BuiltinNode.h
Source/Rr/: Rr.c  RrArray.c  RrArray.h  RrAsset.c  RrAsset.h  RrLib.h  RrTypes.h
